--- a/configs.ini
+++ b/configs.ini
@@ -1,9 +1,10 @@
 [General]
+size=@Size(653 1119)
+pos=@Point(1821 141)
 last_rf_add=TCPIP0::192.168.1.14::inst0::INSTR
-rf_max_volt=10.11
-rf_new_volt=2
-rf_step_int=1
+rf_max_volt=3
+rf_open_trap_volt=1
+rf_close_trap_volt=2
+rf_step_int=0.1
 rf_num_steps=10
 rf_step_formula=t**2
-size=@Size(705 1081)
-pos=@Point(649 90)
