bug fixes and new features

--- a/configs.ini
+++ b/configs.ini
@@ -1,10 +1,10 @@
 [General]
-size=@Size(653 1119)
-pos=@Point(1821 141)
+size=@Size(655 982)
+pos=@Point(1888 126)
 last_rf_add=TCPIP0::192.168.1.14::inst0::INSTR
-rf_max_volt=3
-rf_open_trap_volt=1
-rf_close_trap_volt=2
-rf_step_int=0.1
-rf_num_steps=10
-rf_step_formula=t**2
+rf_max_volt=1
+rf_open_trap_volt=0.3
+rf_close_trap_volt=0.7
+rf_step_int=0.01
+rf_num_steps=100
+rf_step_formula=np.tanh(3*(t-0.5))
